# osArchUniver

./: .gitignore
lab1/: CMakeLists.txt  main.c
lab2/: CMakeLists.txt  frag.glsl  main.c  scene.h  vec3.h  vertex.glsl
lab3/: CMakeLists.txt  www.l  www.y
